ast/src/snapshots/transmute_ast__parser__tests__array_instantiation_one_element.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"[0];\")).parse()"
---
Ok(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(0),
                        span: 1:2; [1, 2],
                    },
                ),
                span: 1:2; [1, 2],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: ArrayInstantiation(
                    [
                        ExprId(0),
                    ],
                ),
                span: 1:1; [0, 3],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(1),
                ),
                span: 1:1; [0, 4],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
