ast/src/snapshots/transmute_ast__parser__tests__array_instantiation_two_elements.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
        ],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(0),
                        span: 1:2; [1, 2],
                    },
                ),
                span: 1:2; [1, 2],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(2),
                        span: 1:5; [4, 5],
                    },
                ),
                span: 1:5; [4, 5],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: ArrayInstantiation(
                    [
                        ExprId(0),
                        ExprId(1),
                    ],
                ),
                span: 1:1; [0, 6],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    None,
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:1; [0, 7],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
