ast/src/snapshots/transmute_ast__parser__tests__array_type.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "S",
            IdentId(2) => "field",
            IdentId(3) => "number",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(3),
                    span: 1:20; [19, 25],
                },
            },
        ],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    None,
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Struct(
                    Identifier {
                        id: IdentId(1),
                        span: 1:8; [7, 8],
                    },
                    [],
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(2),
                                span: 1:12; [11, 16],
                            },
                            type_def_id: TypeDefId(1),
                            span: 1:12; [11, 29],
                        },
                    ],
                ),
                span: 1:1; [0, 31],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 1:20; [19, 25],
            },
            TypeDefId(1) => TypeDef {
                kind: Array(
                    TypeDefId(0),
                    4,
                ),
                span: 1:19; [18, 29],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
