ast/src/snapshots/transmute_ast__parser__tests__array_type_nested.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { field: [[number; 2]; 4] }\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "S",
            IdentId(1) => "field",
            IdentId(2) => "number",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:21; [20, 26],
                },
            },
        ],
        expressions: [],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Struct(
                    Identifier {
                        id: IdentId(0),
                        span: 1:8; [7, 8],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(1),
                                span: 1:12; [11, 16],
                            },
                            type_def_id: TypeDefId(2),
                            span: 1:12; [11, 34],
                        },
                    ],
                ),
                span: 1:1; [0, 36],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    IdentRefId(0),
                ),
                span: 1:21; [20, 26],
            },
            TypeDefId(1) => TypeDef {
                kind: Array(
                    TypeDefId(0),
                    2,
                ),
                span: 1:20; [19, 30],
            },
            TypeDefId(2) => TypeDef {
                kind: Array(
                    TypeDefId(1),
                    4,
                ),
                span: 1:19; [18, 34],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
