ast/src/snapshots/transmute_ast__parser__tests__assignment.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Ok(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "forty_two",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:1; [0, 9],
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 1:13; [12, 14],
                    },
                ),
                span: 1:13; [12, 14],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Assignment(
                    Direct(
                        IdentRefId(0),
                    ),
                    ExprId(0),
                ),
                span: 1:1; [0, 14],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    None,
                    InputId(0),
                    [
                        StmtId(1),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Expression(
                    ExprId(1),
                ),
                span: 1:1; [0, 15],
            },
        ],
        type_defs: [],
        roots: [
            StmtId(0),
        ],
    },
)
