ast/src/snapshots/transmute_ast__parser__tests__binary_operator_minus.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"43 - 1;\")).parse()"
---
Ok(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(43),
                        span: 1:1; [0, 2],
                    },
                ),
                span: 1:1; [0, 2],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 1:6; [5, 6],
                    },
                ),
                span: 1:6; [5, 6],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Binary(
                    ExprId(0),
                    BinaryOperator {
                        kind: Subtraction,
                        span: 1:4; [3, 4],
                    },
                    ExprId(1),
                ),
                span: 1:1; [0, 6],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:1; [0, 7],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
