ast/src/snapshots/transmute_ast__parser__tests__empty_statement_followed_by_non_empty.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"; ret 42;\")).parse()"
---
Ok(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 1:7; [6, 8],
                    },
                ),
                span: 1:7; [6, 8],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Ret(
                    Some(
                        ExprId(0),
                    ),
                    Explicit,
                ),
                span: 1:3; [2, 9],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
